--- a/sass/style.scss
+++ b/sass/style.scss
@@ -79,5 +79,20 @@ body {
 			}
 		}
 	}
+
+	.referencia-imc {
+		padding-left: 1em;
+		padding-bottom: 3em;
+		padding-top: 3em;
+		padding-right: 1em;
+		
+		
+		p{
+		  padding-bottom: 1em;
+		}
+	  }
+	
 }
+
+
 
